--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		body {
 			touch-action: none;
-			margin: auto;
+			margin: 0;
 			border: 0 none;
 			padding: 0;
 			text-align: center;
@@ -17,9 +17,8 @@
 
 		#canvas {
 			display: block;
-			margin: auto;
+			margin: 0;
 			color: white;
-			
 		}
 
 		#canvas:focus {
@@ -113,8 +112,8 @@
 			visibility: visible;
 		}
 	</style>
-<link id='-gd-engine-icon' rel='icon' type='image/png' href='Tech Oldies.icon.png' />
-<link rel='apple-touch-icon' href='Tech Oldies.apple-touch-icon.png'/>
+<link id='-gd-engine-icon' rel='icon' type='image/png' href='index.icon.png' />
+<link rel='apple-touch-icon' href='index.apple-touch-icon.png'/>
 
 </head>
 <body>
@@ -137,10 +136,10 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript' src='Tech Oldies.js'></script>
+	<script type='text/javascript' src='index.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"Tech Oldies","experimentalVK":false,"fileSizes":{"Tech Oldies.pck":10401680,"Tech Oldies.wasm":17867504},"focusCanvas":true,"gdnativeLibs":[]};
+		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":0,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":10401680,"index.wasm":17867504},"focusCanvas":true,"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
 
 		(function() {
